add  filter-fun  document
