# emdad-backend/storage/api-docs/api-docs.json
@@ -5,6 +5,60 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1_0/accounts/filter-company-info": {
+            "get": {
+                "tags": [
+                    "Account Controller"
+                ],
+                "summary": "filter company info",
+                "description": "filter company info Here",
+                "operationId": "filtercompanyinfo",
+                "parameters": [
+                    {
+                        "name": "api_key",
+                        "in": "header",
+                        "description": "Set api_key",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "token",
+                        "in": "header",
+                        "description": "Set user authentication token",
+                        "schema": {
+                            "type": "beraer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object"
+                            }
+                        },
+                        "application/json": {
+                            "schema": {}
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "collection"
+                    },
+                    "500": {
+                        "description": "system error"
+                    },
+                    "422": {
+                        "description": "Validate error"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
         "/api/v1_0/accounts/add-company": {
             "post": {
                 "tags": [
